--- a/ubuntu16.04-multi/Vagrantfile
+++ b/ubuntu16.04-multi/Vagrantfile
@@ -67,7 +67,13 @@ Vagrant.configure("2") do |config|
   #   apt-get update
   #   apt-get install -y apache2
   # SHELL
-  (0..1).each do |i|
+
+  # http://d.hatena.ne.jp/ytoku/20160506/1462552765
+  #config.vm.provider "virtualbox" do |vb|
+  #  vb.customize ["storagectl", :id, "--name", "SCSI Controller", "--hostiocache", "on"]
+  #end
+
+  (0..3).each do |i|
     config.vm.define "node#{i}" do |node|
       node.vm.hostname = "node#{i}"
       node.vm.network "private_network", ip: "192.168.33.1#{i}"
