--- a/ubuntu16.04-multi/Vagrantfile
+++ b/ubuntu16.04-multi/Vagrantfile
@@ -99,5 +99,6 @@ Vagrant.configure("2") do |config|
        stable"
     sudo apt-get update
     sudo apt-get install -y docker-ce
+    sudo cp /vagrant/hosts /etc/hosts
   SHELL
 end
