Add jq/kubernetes installation

--- a/ubuntu16.04-multi/Vagrantfile
+++ b/ubuntu16.04-multi/Vagrantfile
@@ -101,5 +101,15 @@ Vagrant.configure("2") do |config|
     sudo apt-get install -y docker-ce
     sudo usermod -aG docker vagrant
     sudo cp /vagrant/hosts /etc/hosts
+    # install jq
+    sudo apt-get install -y jq
+    # install kubernetes
+    # https://kubernetes.io/docs/tasks/tools/install-kubectl/
+    sudo apt-get update && sudo apt-get install -y apt-transport-https
+    curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+    sudo touch /etc/apt/sources.list.d/kubernetes.list
+    echo "deb http://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+    sudo apt-get update
+    sudo apt-get install -y kubectl kubeadm
   SHELL
 end
