--- a/ubuntu18.04-multi/Vagrantfile
+++ b/ubuntu18.04-multi/Vagrantfile
@@ -81,5 +81,35 @@ Vagrant.configure("2") do |config|
     end
   end
 
+  config.vm.provision "shell", inline: <<-SHELL
+    # https://kubernetes.io/ja/docs/setup/production-environment/tools/kubeadm/install-kubeadm/
+    # swap off
+    sudo swapoff -a
+
+    # install docker
+    sudo apt-get update
+    sudo apt-get install -y docker.io
+    sudo usermod -aG docker vagrant
+
+    # install kubeadm, kubelet, and kubectl
+    sudo apt-get update && sudo apt-get install -y apt-transport-https curl
+    curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+    echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
+    sudo apt-get update
+    sudo apt-get install -y kubelet kubeadm kubectl
+    sudo apt-mark hold kubelet kubeadm kubectl
+
+    # configure master node
+    # sudo kubeadm init --pod-network-cidr=192.168.0.0/16
+    # install calico
+    # https://docs.projectcalico.org/getting-started/kubernetes/quickstart
+    # kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yaml
+    # kubectl create -f https://docs.projectcalico.org/manifests/custom-resources.yaml
+    # watch kubectl get pods -n calico-system
+    # kubectl taint nodes --all node-role.kubernetes.io/master-
+    # kubectl get nodes -o wide
+
+
+  SHELL
 
 end
